--- a/project/Views/Shared/_Layout.cshtml
+++ b/project/Views/Shared/_Layout.cshtml
@@ -9,20 +9,21 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-        <div class="container">
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+    <div class="container">
+        <div class="navbar-collapse collapse py-3 d-flex">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3 w-100 justify-content-center">
+                <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Player" asp-action="ShowAddForm">Добавление</a>
+                        <a class="nav-link" asp-area="" asp-controller="Player" asp-action="ShowAddForm">Добавление</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Catalog" asp-action="ShowPlayers">Список</a>
+                        <a class="nav-link" asp-area="" asp-controller="Catalog" asp-action="ShowPlayers">Список</a>
                     </li>
                 </ul>
-            </div>
+            </nav>
         </div>
-    </nav>
+    </div>
+
 </header>
 <div class="container">
     <main role="main" class="pb-3">
@@ -30,11 +31,6 @@
     </main>
 </div>
 
-<footer class="border-top footer text-muted">
-    <div class="container">
-        &copy; 2023 - project - <a asp-area="" asp-controller="Catalog" asp-action="ShowPlayers">Privacy</a>
-    </div>
-</footer>
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
