Catalog View features
added edit, cancel edit, update in Catalog View,
fixes

--- a/project/Views/Shared/_Layout.cshtml
+++ b/project/Views/Shared/_Layout.cshtml
@@ -14,10 +14,10 @@
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3 w-100 justify-content-center">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Player" asp-action="ShowAddForm">Добавление</a>
+                        <a class="nav-link" asp-area="" asp-controller="AddNewPlayer" asp-action="Index">Добавление</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Catalog" asp-action="ShowPlayers">Список</a>
+                        <a class="nav-link" asp-area="" asp-controller="Catalog" asp-action="Index">Список</a>
                     </li>
                 </ul>
             </nav>
