--- a/project/Views/Shared/_Layout.cshtml
+++ b/project/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="container">
-        <div class="navbar-collapse collapse py-3 d-flex">
+        <div class="navbar-collapse collapse d-flex">
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3 w-100 justify-content-center">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
