--- a/project/Views/AddNewPlayer/Index.cshtml
+++ b/project/Views/AddNewPlayer/Index.cshtml
@@ -1,76 +1,67 @@
-﻿@model PlayerModelView
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model PlayerModelView
 @{
     ViewData["Title"] = "Добавление футболиста";
 }
+<h1>@ViewData["Title"]</h1>
+<div class="w-50">
+    <form class="mt-3" method="post" asp-action="Index">
+        <div class="mb-3">
+            @Html.TextBoxFor(m => m.Name, new { @class = "form-control", placeholder = "Имя" })
+            @Html.ValidationMessageFor(m => m.Name, "", new { @class = "text-danger" })
+        </div>
 
-<div class="container">
-    <h1>@ViewData["Title"]</h1>
-    <div class="w-50">
-        <form class="mt-3" method="post" action="Add">
-            <div class="mb-3 form-group">
-                @* <input type="text" class="form-control" asp-for="Name" name="name" placeholder="Имя" /> *@
-                @* <span asp-validation-for="Name" class="text-danger"></span> *@
-                @Html.EditorFor(m => m.Name, "", new {@class = "form-control"}) <br />
-                @Html.ValidationMessageFor(m=>m.Name, "", new {@class = "text=-danger"})
-            </div>
+        <div class="mb-3">
+            @Html.TextBoxFor(m => m.Surname, new { @class = "form-control", placeholder = "Фамилия" })
+            @Html.ValidationMessageFor(m => m.Surname, "", new { @class = "text-danger" })
+        </div>
 
-            <div class="mb-3">
-                <input type="text" class="form-control" asp-for="Surname" name="surname" placeholder="Фамилия" />
-                <span asp-validation-for="Surname" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            @Html.DropDownListFor(m => m.Sex, new SelectList(Enum.GetValues(typeof(Sex))), "Пол", new { @class = "form-select" })
+            @Html.ValidationMessageFor(m => m.Sex, "", new { @class = "text-danger" })
+        </div>
 
-            <div class="mb-3">
-                <select class="form-select" asp-for="Sex" name="sex">
-                    <option disabled selected>Пол</option>
-                    <option>мужской</option>
-                    <option>женский</option>
-                </select>
-                <span asp-validation-for="Sex" class="text-danger"></span>
-            </div>
+        <div class="mb-3 align-items-center row">
+            <div class="col"> @Html.LabelFor(m => m.DateOfBirth)</div>
+            <div class="col"> @Html.EditorFor(m => m.DateOfBirth, new { htmlAttributes =  new {@class = "form-control", placeholder = "Дата рождения"}})</div>
+            @Html.ValidationMessageFor(m => m.DateOfBirth, "", new { @class = "text-danger" })
+        </div>
 
-            <div class="mb-3">
-                <input type="date" class="form-control" asp-for="DateOfBirth" name="date" placeholder="Дата рождения" />
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-            </div>
+        <div class="mb-3">
+            @Html.TextBoxFor(m => m.Team, new { @class = "form-control", placeholder = "Название команды", list = "datalistOptions"})
+            <datalist id="datalistOptions">
+                @foreach (var team in ViewBag.Teams)
+                {
+                    <option>@team</option>
+                }
+            </datalist>
+            @Html.ValidationMessageFor(m => m.Team, "", new { @class = "text-danger" })
+        </div>
 
-            <div class="mb-3">
-                <input class="form-control" list="datalistOptions" asp-for="Team" name="team" placeholder="Название команды" />
-                <datalist id="datalistOptions">
-                    @foreach (var country in ViewBag.Teams)
-                    {
-                        <option>@country</option>
-                    }
-                </datalist>
-                <span asp-validation-for="Team" class="text-danger"></span>
-            </div>
-
-            <div class="mb-3">
-                <select class="form-select" asp-for="Country" name="country">
-                    <option disabled selected>Страна</option>
-                    <option>Россия</option>
-                    <option>США</option>
-                    <option>Италия</option>
-                </select>
-                <span asp-validation-for="Country" class="text-danger"></span>
-            </div>
-
-            <button type="submit" class="btn btn-primary" onclick="return DisplaySavingPrompt(this, 'Сохранение...');">Создать</button>
-        </form>
-    </div>
+        <div class="mb-3">
+            @Html.DropDownListFor(m => m.Country, new SelectList(Enum.GetValues(typeof(Country))), "Страна", new { @class = "form-select" })
+            @Html.ValidationMessageFor(m => m.Country, "", new { @class = "text-danger" })
+        </div>
+        <button type="submit" class="btn btn-primary Submit" >Создать</button>
+        @ViewBag.Result
+    </form>
 </div>
 
 @section Scripts
 {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
     <script type="text/javascript">
-          function DisplaySavingPrompt(ctl, msg){
-          event.preventDefault();
-          $(ctl).prop("disabled", true).text(msg);
-          $(".submit-progress").removeClass("hidden");
-          setTimeout(function (){
-              $("form").submit()
-              }, 2);
-          return true;
-          }
+          $("body").on("click", ".Submit", function (){
+              if (Page_ClientValidate){
+                  event.preventDefault();
+                            $(this).prop("disabled", true).text('Сохранение...');
+                            $(".submit-progress").removeClass("hidden");
+                            setTimeout(function (){
+                                $("form").submit()
+                                }, 2);
+                            return true;
+                  }
+              else {alert("invalid")}
+              });          
     </script>
 }
