--- a/project/Views/Shared/_Layout.cshtml
+++ b/project/Views/Shared/_Layout.cshtml
@@ -11,10 +11,10 @@
 <header>
     <div class="container">
         <div class="navbar-collapse collapse d-flex">
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3 w-100 justify-content-center">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow rounded mb-3 w-100 justify-content-center">
                 <ul class="nav nav-pills">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="AddNewPlayer" asp-action="Index">Добавление</a>
+                        <a class="nav-link" asp-area="" asp-controller="Catalog" asp-action="CreateOrEdit">Добавление</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Catalog" asp-action="Index">Список</a>
